--- a/html/index.html
+++ b/html/index.html
@@ -69,12 +69,12 @@
             </div>
             <div id="social">
                 <div class="socialDiv">
-                    <a href="" class="icono" target="_blank">
+                    <a href="https://github.com/Manuf100" class="icono" target="_blank">
                         <img src="\Portfolio.2\img\github-dark.svg">
                     </a>
                 </div>
                 <div class="socialDiv">
-                    <a href="" class="icono" target="_blank">
+                    <a href="https://www.instagram.com/_manufigue?igsh=MjVtazI5NTQ1dmQ4" class="icono" target="_blank">
                         <img src="\Portfolio.2\img\instagram.svg" width="100%">
                     </a>
                 </div>
@@ -97,9 +97,20 @@
                     <div class="col-md-6 slide-right">
                         <h3 class="text-white text h3-about font-weight-bold">¿Quien soy?</h3>
                         <div>
-                            <p class="text p-14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta cum porro nemo? At, nesciunt amet! Ea alias pariatur aperiam quos aut similique, tempora neque odio deleniti unde nesciunt sapiente! Atque.</p>
-                            <p class="text p-14">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt a delectus voluptatem sed error adipisci eos, rerum maxime numquam quae, tempore accusantium eaque quaerat, nesciunt ad optio sapiente laboriosam maiores.</p>
-                            <p class="text p-14">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolorem voluptate aliquid accusamus, perferendis nesciunt sit ratione facilis odio assumenda natus deleniti dolorum omnis consequatur exercitationem quae quasi aut excepturi?</p>
+                            <p class="text p-14">
+                                Tengo <span id="edad"></span> años. Nací en la provincia de Salta, Argentina, y actualmente estudio Ingeniería Informática en la Universidad Católica de Salta. Me gusta aprender constantemente y encontrar nuevas formas de aplicar lo que estudio.
+                            </p>
+                            
+                            <p class="text p-14">
+                                Disfruto trabajar en proyectos pequeños que me permitan practicar y mejorar mis conocimientos. Aunque actualmente estoy más enfocado en el desarrollo front-end, también tengo nociones de back-end. Mi mayor motivación es ver cómo una idea toma forma y se convierte en algo funcional y útil.
+                            </p>
+                            
+                            <p class="text p-14">
+                                Soy una persona tranquila, perseverante y detallista. Me gusta aprender de los errores, trabajar con objetivos claros y mantener siempre una actitud positiva. Disfruto ayudar a los demás, compartir lo que sé y aportar con lo que puedo en cada proyecto o equipo del que formo parte.
+                            </p>
+                            <p class="text p-14">
+                                Actualmente estoy aprendiendo lo básico de Flutter y Dart, con el objetivo de adquirir conocimientos en desarrollo móvil y poder crear aplicaciones simples por mi cuenta.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-1"></div>
@@ -114,6 +125,30 @@
                             <div class="div-skills bg-info">BOOSTRAP</div>
                             <div class="div-skills bg-info">UNITY</div>
                             <div class="div-skills bg-info">HOSTINGER</div>
+                            <div class="div-skills bg-info">WORDPRESS</div>
+                            <div class="div-skills bg-info">GIT</div>
+                            <div class="div-skills bg-info">GITHUB</div>
+                            <div class="div-skills bg-info">PYTHON</div>
+                            <div class="div-skills bg-info">TIENDANUBE</div>
+                            <div class="div-skills bg-info">JSON</div>
+                            <div class="div-skills bg-info">FLUTTER</div>
+                            <div class="div-skills bg-info">DART</div>
+                            <div class="div-skills bg-info">XAMPP</div>
+                        </div>
+                        <h3 class="text-white text h3-about font-weight-bold">CARACTERÍSTICAS PERSONALES</h3>
+                        <div class="d-inline-flex  flex-wrap">
+                            <div class="div-skills bg-info">RESPETO</div>
+                            <div class="div-skills bg-info">PUNTUALIDAD</div>
+                            <div class="div-skills bg-info">RESPONSABILIDAD</div>
+                            <div class="div-skills bg-info">ORGANIZACIÓN</div>
+                            <div class="div-skills bg-info">APRENDIZAJE CONTINUO</div>
+                            <div class="div-skills bg-info">PUNTUALIDAD</div>
+                            <div class="div-skills bg-info">DETALLISTA</div>
+                        </div>
+                        <h3 class="text-white text h3-about font-weight-bold">IDIOMAS</h3>
+                        <div class="d-inline-flex  flex-wrap">
+                            <div class="div-skills bg-info">Español — Nativo</div>
+                            <div class="div-skills bg-info">Inglés — B2</div>
                         </div>
                     </div>
                 </div>
@@ -183,12 +218,12 @@
                 </div>
                 <div class="slide-right redes">
                     <div class="socialDivContact">
-                        <a href="" class="iconoContact">
+                        <a href="https://github.com/Manuf100" target="_blank" class="iconoContact">
                             <img src="\Portfolio.2\img\github-dark.svg">@Manuf100
                         </a>
                     </div>
                     <div class="socialDivContact">
-                        <a href="" class="iconoContact">
+                        <a href="https://www.instagram.com/_manufigue?igsh=MjVtazI5NTQ1dmQ4" target="_blank" class="iconoContact">
                             <img src="\Portfolio.2\img\instagram.svg" width="100%"> @_manufigue
                         </a>
                     </div>
@@ -210,5 +245,6 @@
     </footer>
     <script src="\Portfolio.2\js\animaciones.js"></script>
     <script src="\Portfolio.2\js\desplazar-click.js"></script>
+    <script src="\Portfolio.2\js\edad.js"></script>
 </body>
 </html>
