--- a/html/index.html
+++ b/html/index.html
@@ -91,7 +91,7 @@
             <div class="m-auto my-size-about">
                 <div>
                     <h2 class="d-block h2-about text-center text text-white font-weight-bold">SOBRE MI</h2>
-                    <p class="text-white text pText p-about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sunt mollitia, aperiam dolorem inventore ullam quaerat totam, illum voluptas dignissimos, dolorum nihil corporis iusto hic commodi ratione ad eveniet consequatur!</p>
+                    <p class="text-white text pText p-about">Acá vas a poder encontrar mis principales proyectos.</p>
                 </div>
                 <div class="row about-content">
                     <div class="col-md-6 slide-right">
@@ -159,21 +159,65 @@
             <div class="m-auto my-size-about">
                 <div>
                     <h2 class="d-block h2-about text-center text text-white font-weight-bold">PROYECTOS</h2>
-                    <p class="text-white text pText p-about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sunt mollitia, aperiam dolorem inventore ullam quaerat totam, illum voluptas dignissimos, dolorum nihil corporis iusto hic commodi ratione ad eveniet consequatur!</p>
+                    <p class="text-white text pText p-about">Acá vas a poder encontrar mis principales proyectos. Algunos no se proporcionan el codigo debido a la privacidad.</p>
                 </div>
                 <div class="row about-content slide-right">
                     <!--card-->
                     <div class="col-md-4 d-flex align-items-stretch mb-4">
                         <div class="card h-100 d-flex flex-column padding-card">
-                            <img class="card-img-top img-project rounded img-fluid" src="\Portfolio.2\img\logo_final.png" alt="Cancionero Schoenstatt">
+                            <img class="card-img-top img-project rounded img-fluid img-expandible" src="\Portfolio.2\img\logo_final.png" alt="Cancionero Schoenstatt">
                             <div class="card-body d-flex flex-column">
                                 <h4>Cancionero Schoenstatt</h4>
-                                <p class="text-card mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio et sed sapiente odit doloribus quaerat veniam ipsum id cum suscipit enim ea, fugiat corrupti asperiores, incidunt nam hic labore! Obcaecati!</p>
+                                <p class="text-card mb-4">Cancionero Católico de Schoenstatt con Acordes.<br>Esta aplicación contiene un cancionero con acordes para guitarra, junto con diversas herramientas utilizadas en el Movimiento de Schoenstatt. Está diseñada para facilitar el acceso a cantos y oraciones en encuentros, misas y momentos de oración.</p>
+                                <p class="text-card mb-4"><b>FECHA: </b>Marzo 2023 - Actualidad</p>
+                                <p class="text-card mb-4"><b>HERRAMIENTAS: </b>Unity, C#, supabase</p>
                                 <div class="mt-auto ProjectDiv">
                                     <div class="d-inline-flex flex-wrap">
-                                        <a href="#" class="iconoP mr-2" target="_blank"><i class="fas fa-globe"></i></a>
-                                        <a href="#" class="iconoP mr-2" target="_blank"><i class="fab fa-github"></i></a>
-                                        <a href="#" class="iconoP" target="_blank"><i class="fab fa-google-play"></i></a>
+                                        <a href="https://cancionerosalta.com/" class="iconoP mr-2" target="_blank"><i class="fas fa-globe"></i></a>
+                                        <a href="#https://play.google.com/store/apps/details?id=com.MANUF.JMSALTA" class="iconoP" target="_blank"><i class="fab fa-google-play"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex align-items-stretch mb-4">
+                        <div class="card h-100 d-flex flex-column padding-card">
+                            <img class="card-img-top img-project rounded img-fluid img-expandible" src="\Portfolio.2\img\economia.png" alt="Economía personal">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Economía personal</h4>
+                                <p class="text-card mb-4">Programa para llevar el control de tu economia. Registrando los ingresos, gastos por mes, agrupandolos por categorias.</p>
+                                <p class="text-card mb-4"><b>FECHA: </b>Junio 2025</p>
+                                <p class="text-card mb-4"><b>HERRAMIENTAS: </b>HTML, CSS, JS, PHP, MYSQL, XAMPP</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex align-items-stretch mb-4">
+                        <div class="card h-100 d-flex flex-column padding-card">
+                            <img class="card-img-top img-project rounded img-fluid img-expandible" src="\Portfolio.2\img\vivero.png" alt="vivero">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Ecommerce Vivero</h4>
+                                <p class="text-card mb-4">Ecommerce de un vivero para la materia Lenguajes 3 y Lenguajes 4, basado en el vivero mario</p>
+                                <p class="text-card mb-4"><b>FECHA: </b>Marzo 2024 - Noviembre 2024</p>
+                                <p class="text-card mb-4"><b>HERRAMIENTAS: </b>HTML, CSS, JS, PHP, MYSQL, XAMPP</p>
+                                <div class="mt-auto ProjectDiv">
+                                    <div class="d-inline-flex flex-wrap">
+                                        <a href="https://github.com/Manuf100/vivero" class="iconoP mr-2" target="_blank"><i class="fab fa-github"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 d-flex align-items-stretch mb-4">
+                        <div class="card h-100 d-flex flex-column padding-card">
+                            <img class="card-img-top img-project rounded img-fluid img-expandible" src="\Portfolio.2\img\jugadores.png" alt="Jugadores">
+                            <div class="card-body d-flex flex-column">
+                                <h4>Trabajo final principio informatica</h4>
+                                <p class="text-card mb-4">Trabajo final para la materia principio de informática. Cargar tiempos de deportistas en un excel.</p>
+                                <p class="text-card mb-4"><b>FECHA: </b>Agosto 2022 - Octubre 2022</p>
+                                <p class="text-card mb-4"><b>HERRAMIENTAS: </b>PYTHON</p>
+                                <div class="mt-auto ProjectDiv">
+                                    <div class="d-inline-flex flex-wrap">
+                                        <a href="https://github.com/Manuf100/trabajo-final-principio-informatica" class="iconoP mr-2" target="_blank"><i class="fab fa-github"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -246,5 +290,6 @@
     <script src="\Portfolio.2\js\animaciones.js"></script>
     <script src="\Portfolio.2\js\desplazar-click.js"></script>
     <script src="\Portfolio.2\js\edad.js"></script>
+    <script src="\Portfolio.2\js\abrir_img.js"></script>
 </body>
 </html>
